--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
 .App {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.workspace {
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.zoom-button {
+  width: 25px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.track-editor {
+  overflow-x: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.ruler {
+  width: fit-content;
+  border: 1px solid black;
+  white-space: nowrap;
+  padding: 0px 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.measure {
+  white-space: nowrap;
+  display: inline-block;
+  font-size: 0.75em;
+  border-left: 1px solid black;
+  text-align: left;
+  position: relative;
+  height: 2em;
+}
+
+.beat {
+  position: absolute;
 }
