Initial implementation of note regions, including overlap detection and merge logic

--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,12 @@
   position: relative;
 }
 
+.region {
+  position: absolute;
+  background-color: rgba(0, 150, 0, 0.137);
+  border-radius: 5px; /* what about corner notes? */
+}
+
 .track-note {
   display: inline-block;
   background-color: green;
