--- a/src/App.css
+++ b/src/App.css
@@ -44,18 +44,77 @@
   border-bottom: 2px solid black;
 }
 
+.track-name {
+  font-size: 14px;
+  height: 17px;
+  width: 150px;
+  border-radius: 10px;
+  padding-left: 6px;
+  padding-right: 6px;
+  background-color: rgb(67, 67, 67);
+  color: white;
+  outline: none;
+  border: none;
+  margin-top: 5px;
+}
+
+.volume-fader {
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.volume-fader::-webkit-slider-runnable-track {
+  width: 300px;
+  height: 2px;
+  background: #ddd;
+  border: none;
+  border-radius: 2px;
+}
+
+.volume-fader::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 12px;
+  width: 12px;
+  margin-top: -5px;
+  background-color: blue;
+  border-radius: 6px;
+}
+
+/* .volume-fader::-moz-range-thumb {
+  height: 2px;
+  width: 2px;
+} */
+
 .mute-solo-chk {
   display: none;
 }
 
-.mute-btn {
+.mute-btn,
+.solo-btn {
+  display: inline-block;
+  position: relative;
   width: 20px;
   height: 20px;
+  margin-left: 5px;
+  border: 1px solid black;
+  background-color: rgb(67, 67, 67);
 }
 
-.solo-btn {
-  width: 20px;
-  height: 20px;
+.mute-btn-text {
+  position: absolute;
+  top: -3px;
+  left: 2px;
+  color: red;
+  user-select: none;
+}
+
+.solo-btn-text {
+  position: absolute;
+  top: -3px;
+  left: 5px;
+  color: yellow;
+  user-select: none;
 }
 
 .mute-solo-chk:checked + .mute-btn {
@@ -63,7 +122,12 @@
 }
 
 .mute-solo-chk:checked + .solo-btn {
-  background-color: yellow;
+  background-color: rgb(231, 195, 17);
+}
+
+.mute-solo-chk:checked + .mute-btn .mute-btn-text,
+.mute-solo-chk:checked + .solo-btn .solo-btn-text {
+  color: white;
 }
 
 .scroll-content-wrapper {
