--- a/src/App.css
+++ b/src/App.css
@@ -342,14 +342,18 @@
   border-radius: 5px; /* what about corner notes? */
 }
 
-.track-note {
+.track-note,
+.editor-note {
   display: inline-block;
   background-color: green;
   position: absolute;
 }
 
 .midi-editor {
+  position: absolute;
+  top: 0px;
   height: 2112px;
+  width: 100%;
 }
 
 .position-marker {
