--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,16 @@
   overflow: hidden;
 } */
 
+.projects-list {
+  list-style-type: none;
+}
+
 .workspace {
   height: 100vh;
   min-width: 500px;
   overflow-x: hidden;
   outline: none;
+  user-select: none;
 }
 
 .controls-bar {
@@ -188,7 +193,7 @@
   position: absolute;
   top: -3px;
   left: 5px;
-  user-select: none;
+  /* user-select: none; */
 }
 
 .mute-btn-text {
@@ -203,7 +208,7 @@
   position: absolute;
   top: 1px;
   left: 1px;
-  user-select: none;
+  /* user-select: none; */
   stroke: rgb(95, 6, 95);
   fill: rgb(95, 6, 95);
 }
@@ -317,7 +322,7 @@
   position: absolute;
   top: -1px;
   margin-left: 4px;
-  user-select: none;
+  /* user-select: none; */
 }
 
 .grid-wrapper {
@@ -398,6 +403,10 @@
 
 .plus-minus-button {
   width: 25px;
+}
+
+.tempo-input {
+  width: 35px;
 }
 
 .scrollbar-h {
