Implemented userCurrentView. Implemented message routing to child components. Used it to implement userMouse handling in the MidiEditor component. Implemented userMouse sending. Added visible cursors. Added persistent user colors. Added username, the routed childMessage state, and the projectUsers array state to the TracksContext.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -384,6 +384,13 @@
   position: absolute;
 }
 
+.mouse-cursor {
+  display: inline-block;
+  position: absolute;
+  width: 13px;
+  height: 20px;
+}
+
 .midi-editor {
   position: absolute;
   top: 0px;
